Enhanced UI with modern styling, animations, and visual effects

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="mole.css">
     <script src="mole.js"></script>
 </head>
-<body>npnp
-    <h2 id="score">0</h2>
-    <!-- 3x3 -->
-    <div id="board">
+<body>
+    <div class="game-container">
+        <h1 class="game-title">Whac-a-Mole</h1>
+        <div class="score-container">
+            <h2 id="score">0</h2>
+            <span class="score-label">Score</span>
+        </div>
+        <div id="board"></div>
     </div>
 </body>
 </html>
